--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,45 @@
   color: #61dafb;
 }
 
+.app-header {
+  background-color: gray;
+  color: white;
+  margin-top: 1%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin-bottom: 5%;
+}
+
+.app-footer {
+  background-color: gray;
+  color: white;
+  margin-top: 1%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin-bottom: 5%;
+}
+
+.Cubes {
+  margin: auto;
+  border: solid black 2px;
+  height: 160px;
+  width: 160px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.cube {
+  height: 50px;
+  width: 50px;
+  border: solid gray 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
